Feat: rifattorizzazione completa crittografia e mining funzionante quasi completo